V2 se crea una nueva usuaria usando: userName, email, password. Return token jwt y funciona spring security